STOPPING POINT: Tried to debug more. Getting a 500 error in DevTools.
Good progress was made. However, done for the night.